@@ -8,6 +8,7 @@ Version 1.3
  - Fixed Issue 396 - Add Z-Wave.me RaZberry thanks to steph10200 (Alex)
  - Fixed Issue 398 - Add Z-Wave.me USB Stick thanks to ugo.viti (Alex)
  - Fixed Issue 389 - Add Evolve LRM-AS/LSM-15 Config file thanks to Gwmullin (Alex)
+ - Fixed Issue 386 - Add Duwi and Z-Wave.Me Config files thanks to pim.vanderhaven (Alex)
 
 Version 1.2 
  - Released on 15/10/14
